// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input \`["Co-worker", "", "Co-worker", ":)", "Co-worker"]\` with max 5 and forceChoice true with a choices object 1`] = `
Object {
  "value": Array [
    "Co-worker",
    "Co-worker",
    "Co-worker",
  ],
}
`;

exports[`input \`["Co-worker", "", "Co-worker", ":)", "Co-worker"]\` with max 5 and forceChoice true with a choices object: text inputs length 1`] = `5`;

exports[`input \`["Friend", "RANDOM INPUT", "Other"]\` with max 5 and forceChoice true with a choices object 1`] = `
Object {
  "value": Array [
    "Friend",
    "Other",
  ],
}
`;

exports[`input \`["Friend", "RANDOM INPUT", "Other"]\` with max 5 and forceChoice true with a choices object: text inputs length 1`] = `5`;

exports[`input \`["I am typing 1", "I am typing 2", "I am typing 3", "I am typing 4"]\` with max 4 and forceChoice false with a choices object 1`] = `
Object {
  "value": Array [
    "I am typing 1",
    "I am typing 2",
    "I am typing 3",
    "I am typing 4",
  ],
}
`;

exports[`input \`["I am typing 1", "I am typing 2", "I am typing 3", "I am typing 4"]\` with max 4 and forceChoice false with a choices object: text inputs length 1`] = `4`;

exports[`input \`["I am typing 1", "I am typing 2", "I am typing 3", "I am typing 4"]\` with max 4 and forceChoice false with a choices string 1`] = `
Object {
  "value": Array [
    "I am typing 1",
    "I am typing 2",
    "I am typing 3",
    "I am typing 4",
  ],
}
`;

exports[`input \`["I am typing 1", "I am typing 2", "I am typing 3", "I am typing 4"]\` with max 4 and forceChoice false with a choices string: text inputs length 1`] = `4`;

exports[`input \`["I am typing 1", "I am typing 2", "I am typing 3", "I am typing 4"]\` with max 4 without choices 1`] = `
Object {
  "value": Array [
    "I am typing 1",
    "I am typing 2",
    "I am typing 3",
    "I am typing 4",
  ],
}
`;

exports[`input \`["I am typing 1", "I am typing 2", "I am typing 3", "I am typing 4"]\` with max 4 without choices: text inputs length 1`] = `4`;

exports[`input \`["I am typing 1", "I am typing 2"]\` with max 2 and forceChoice true with a choices object 1`] = `
Object {
  "value": Array [],
}
`;

exports[`input \`["I am typing 1", "I am typing 2"]\` with max 2 and forceChoice true with a choices object: text inputs length 1`] = `2`;

exports[`input \`["I am typing 1", "I am typing 2"]\` with max 2 and forceChoice true with a choices string 1`] = `
Object {
  "value": Array [],
}
`;

exports[`input \`["I am typing 1", "I am typing 2"]\` with max 2 and forceChoice true with a choices string: text inputs length 1`] = `2`;

exports[`input \`["I am typing 1", "Sibling / other relative", "I am typing 1", "I am typing 2", "Parent"]\` with max 5 and forceChoice true with a choices object 1`] = `
Object {
  "value": Array [
    "Sibling / other relative",
    "Parent",
  ],
}
`;

exports[`input \`["I am typing 1", "Sibling / other relative", "I am typing 1", "I am typing 2", "Parent"]\` with max 5 and forceChoice true with a choices object: text inputs length 1`] = `5`;

exports[`input \`["I am typing 1", "😀", "I am typing 1", "I am typing 2", "🤪"]\` with max 5 and forceChoice true with a choices string 1`] = `
Object {
  "value": Array [
    "😀",
    "🤪",
  ],
}
`;

exports[`input \`["I am typing 1", "😀", "I am typing 1", "I am typing 2", "🤪"]\` with max 5 and forceChoice true with a choices string: text inputs length 1`] = `5`;

exports[`input \`["I am typing 1"]\` with max 3 and maxMinus "PrevQuestionId" without choices 1`] = `
Object {
  "value": Array [
    "I am typing 1",
  ],
}
`;

exports[`input \`["I am typing 1"]\` with max 3 and maxMinus "PrevQuestionId" without choices: text inputs length 1`] = `3`;

exports[`input \`["I am typing 1"]\` with max 3 without choices 1`] = `
Object {
  "value": Array [
    "I am typing 1",
  ],
}
`;

exports[`input \`["I am typing 1"]\` with max 3 without choices: text inputs length 1`] = `3`;

exports[`input \`["John Doe", "王小明"]\` with max 4 and maxMinus "FamilyNames" without choices 1`] = `
Object {
  "value": Array [
    "John Doe",
    "王小明",
  ],
}
`;

exports[`input \`["John Doe", "王小明"]\` with max 4 and maxMinus "FamilyNames" without choices: text inputs length 1`] = `2`;

exports[`input \`["John Doe", "王小明"]\` with max 5 without choices 1`] = `
Object {
  "value": Array [
    "John Doe",
    "王小明",
  ],
}
`;

exports[`input \`["John Doe", "王小明"]\` with max 5 without choices: text inputs length 1`] = `5`;

exports[`input \`["Kristofferson Silverfox"]\` with max 4 and maxMinus "ZootopiaCharacters" without choices 1`] = `
Object {
  "value": Array [
    "Kristofferson Silverfox",
  ],
}
`;

exports[`input \`["Kristofferson Silverfox"]\` with max 4 and maxMinus "ZootopiaCharacters" without choices: text inputs length 1`] = `1`;

exports[`input \`["Mr. Fox", "Felicity Fox", "Ash Fox", "Kristofferson Silverfox"]\` with max 4 without choices 1`] = `
Object {
  "value": Array [
    "Mr. Fox",
    "Felicity Fox",
    "Ash Fox",
    "Kristofferson Silverfox",
  ],
}
`;

exports[`input \`["Mr. Fox", "Felicity Fox", "Ash Fox", "Kristofferson Silverfox"]\` with max 4 without choices: text inputs length 1`] = `4`;

exports[`input \`["Stranger", "Stranger", "Stranger", "Stranger", "RANDOM"]\` with max 5 and forceChoice false with a choices object 1`] = `
Object {
  "value": Array [
    "Stranger",
    "Stranger",
    "Stranger",
    "Stranger",
    "RANDOM",
  ],
}
`;

exports[`input \`["Stranger", "Stranger", "Stranger", "Stranger", "RANDOM"]\` with max 5 and forceChoice false with a choices object: text inputs length 1`] = `5`;

exports[`input \`["🤪", "", "🤪", ":)", "🤪"]\` with max 5 and forceChoice true with a choices string 1`] = `
Object {
  "value": Array [
    "🤪",
    "🤪",
    "🤪",
  ],
}
`;

exports[`input \`["🤪", "", "🤪", ":)", "🤪"]\` with max 5 and forceChoice true with a choices string: text inputs length 1`] = `5`;

exports[`input \`["🧐", "RANDOM INPUT", "😎"]\` with max 5 and forceChoice true with a choices string 1`] = `
Object {
  "value": Array [
    "🧐",
    "😎",
  ],
}
`;

exports[`input \`["🧐", "RANDOM INPUT", "😎"]\` with max 5 and forceChoice true with a choices string: text inputs length 1`] = `5`;

exports[`input \`["🧐", "🧐", "🧐", "🧐", "RANDOM"]\` with max 5 and forceChoice false with a choices string 1`] = `
Object {
  "value": Array [
    "🧐",
    "🧐",
    "🧐",
    "🧐",
    "RANDOM",
  ],
}
`;

exports[`input \`["🧐", "🧐", "🧐", "🧐", "RANDOM"]\` with max 5 and forceChoice false with a choices string: text inputs length 1`] = `5`;

exports[`input \`[]\` with max 4 and maxMinus "PrevQuestionId" without choices 1`] = `
Object {
  "value": Array [],
}
`;

exports[`input \`[]\` with max 4 and maxMinus "PrevQuestionId" without choices: text inputs length 1`] = `4`;
